# caro

./: .actrc  .codespellignore  .crush.json  .dockerignore  .envrc  .gitattributes  .gitignore  .secrets.example  ACT_READY.md  AGENTS.md  AGENT_COORDINATION_PLAN.md  AGENT_SYSTEM.md  AI_STRATEGY.md  ANGEL_SAFE_DECK.md  ARCHITECTURE.md  ARCHITECTURE_GUIDE.md  ASSET-LICENSE-TEMPLATE.md  ATUIN_ALIGNMENT_STRATEGY.md  BEGINNER_FRIENDLY_UPDATE.md  BLOCKERS.md  BRAND_STYLE_GUIDE.md  BRAND_VOICE.md  BUILD.md  BUSINESS_MODEL.md  CANDLE_BACKEND_IMPLEMENTATION_SUMMARY.md  CANDLE_POC_METRICS.md  CHANGELOG.md  CHROMADB_DESIGN.md  CHROMA_INTEGRATION.md  CI_CD_EXPLAINED.md  CI_IMPLEMENTATION_SUMMARY.md  CI_INFERENCE_TESTING_PLAN.md  CI_INFRASTRUCTURE_SETUP.md  CI_TESTING_QUICKSTART.md  CLAUDE.md  CLAUDE_SKILL_ISSUE.md  CLA_RESEARCH.md  CODE_OF_CONDUCT.md  COMMUNITY_FUNDING_STRATEGY.md  COMMUNITY_GROWTH.md  (+152 more)
.agent-prompts/: README.md  code-reviewer.md  community-manager.md  phase-1-inference.md  phase-2-ux.md  phase-3-distribution.md  phase-4-documentation.md  phase-5-testing.md  technical-pm.md
.beads/: .gitignore  README.md
.cargo/: audit.toml  config.toml
.claude/: AGENTS.md  QA-SIGNOFF-BUNDLES-v1.0.4.md  QA-SIGNOFF-v1.0.4.md  agent-profiles.yaml  hookify.validate-patterns-before-commit.local.md  ralph-loop.local.md  settings.json
.claude-plugin/: marketplace.json
.config/: nextest.toml
.github/: CODEOWNERS  CONTRIBUTING_DOCS.md  FUNDING.yml  LABELS.md  MAINTAINERS.md  PULL_REQUEST_TEMPLATE.md  RELEASE_TEMPLATE.md  TRANSLATION_BACKENDS.md  TRANSLATION_TESTING.md  WELCOME.md  copilot-instructions.md  dependabot.yml  labeler.yml  labels.yml  release-drafter.yml
.husky/: pre-commit
.install/: DISTRIBUTION_SETUP.md  POST_INSTALL.md  README.md  chocolatey-install.ps1  chocolatey-package.nuspec  homebrew-formula.rb  scoop-manifest.json  winget-manifest.yaml
.kittify/: AGENTS.md  active-mission  metadata.yaml
.modulization/: config.yaml
assets/: ARTIST_README_TEMPLATE.md  README.md
benches/: BENCHMARKS.md  cache.rs  cache_config_benchmarks.rs  config.rs  context.rs  context_intelligence_bench.rs  logging.rs  metal_vs_cpu.rs  performance.rs
blog/: 2025-12-announcing-caro.md
book/: .gitignore  README.md  THEME_USAGE_GUIDE.md  book.toml
brand-assets/: ASCII_LOGOS.md  BRAND_USAGE.md  (+4 more)
caro-wasm/: Cargo.toml
caro-wasm/src/: lib.rs
crates/cmdai/: Cargo.toml
crates/cmdai/src/: lib.rs  main.rs
crates/cmdai/src/backends/: decision_tree.rs  mod.rs  selector.rs
crates/cmdai/src/backends/embedded/: common.rs  cpu.rs  embedded_backend.rs  mlx.rs  mod.rs
crates/cmdai/src/backends/remote/: mod.rs  ollama.rs
crates/cmdai/src/cli/: mod.rs
crates/cmdai/src/commands/: mod.rs
crates/cmdai/src/config/: interactive.rs  interactive_new.rs  io.rs
crates/cmdai/src/evaluation/: dataset.rs  engine.rs  metrics.rs  mod.rs  runner.rs
crates/cmdai/src/history/: migrations.rs  mod.rs  models.rs  search.rs
crates/cmdai/src/logging/: mod.rs  redaction.rs
crates/cmdai/src/performance/: monitor.rs
crates/cmdai/src/safety/: detector.rs  mod.rs
crates/cmdai/src/semantic/: mod.rs
crates/cmdai/src/streaming/: mod.rs
crates/cmdai/src/testing/: cases.rs  metrics.rs  mod.rs  reporter.rs  runner.rs
crates/cmdai/tests/: advanced_safety_contract.rs  backend_selection_debug.rs  cli_interface_contract.rs  command_accuracy_test.rs  command_generation_accuracy.rs  config_contract.rs  debug_pattern_matching.rs  e2e_cli_tests.rs  embedded_backend_contract.rs  embedded_integration.rs  history_models_contract.rs  integration_tests.rs  interactive_config_contract.rs  mlx_backend_contract.rs  property_tests.rs  remote_integration.rs  system_integration.rs  test_risk_level_matching.rs  vllm_backend_contract.rs
crates/cmdai/tests/contract/: backend_selector_contract.rs  end_to_end_contract.rs  history_manager_contract.rs  interactive_config_contract.rs  safety_validator_contract.rs  streaming_generator_contract.rs
crates/eval-assertions/: Cargo.toml
crates/eval-assertions/src/: command_string.rs  lib.rs  runtime.rs  validator.rs
crates/eval-core/: Cargo.toml
crates/eval-core/src/: dataset.rs  lib.rs  results.rs  types.rs
crates/eval-report/: Cargo.toml
crates/eval-report/src/: json.rs  junit.rs  lib.rs  markdown.rs
crates/eval-runner/: Cargo.toml
crates/eval-runner/src/: engine.rs  lib.rs  runner.rs
crates/eval-sandbox/: Cargo.toml
crates/eval-sandbox/src/: docker.rs  executor.rs  lib.rs  local.rs  sandbox.rs
demos/demo_playground/: Cargo.toml  README.md  README_DEMO.md
demos/demo_playground/config/: nginx.conf
demos/demo_playground/scripts/: deploy.sh  migrate.sh
demos/demo_playground/src/: database.rs  main.rs  models.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  database.rs  main.rs  models.rs
tests/evaluation/: Cargo.toml  README.md  dataset.rs  dataset.yaml  harness.rs  main.rs  mod.rs  reporter.rs  run_eval.py  run_eval.sh  run_eval_v2.sh  test_cases.toml  validators.rs
tests/evaluation/datasets/correctness/: file_operations.json  network_commands.json  text_processing.json
tests/evaluation/datasets/safety/: dangerous_patterns.json  false_positives.json
tests/evaluation/prompts/v1.0/: correctness.md  metadata.yaml  safety.md
tests/evaluation/src/: batch_executor.rs  capability_matrix.rs  dashboard.rs  dataset.rs  dataset_export.rs  evaluator.rs  execution_cache.rs  executor.rs  issue_automation.rs  lib.rs  model_profiling.rs  pattern_extraction.rs  posix_checker.rs  prompt_comparison.rs  quality_metrics.rs  reporter.rs  safety_validator.rs  test_generator.rs  test_runner.rs  timeseries.rs  token_tracker.rs  training_tracker.rs
tests/evaluation/src/prompts/: loader.rs  metadata.rs  mod.rs  registry.rs
tests/evaluation/tests/: test_correctness.rs  test_safety.rs  test_wp09.rs  test_wp10_wp11.rs  test_wp12_wp13.rs  test_wp14_wp15.rs  test_wp16_wp17.rs  test_wp18_wp19.rs  test_wp20_wp21.rs  test_wp22_wp23.rs
website/ratzilla-demo/: Cargo.toml  README.md  Trunk.toml  index.html
website/ratzilla-demo/src/: lib.rs
(+2687 files in other folders)
