[package]
name = "caro"
version = "1.1.3"
edition = "2021"
rust-version = "1.83"
description = "Convert natural language to shell commands using local LLMs"
license = "AGPL-3.0"
authors = ["Wildcard <kobi@caro.sh>", "Claude Code <noreply@anthropic.com>"]
homepage = "https://caro.sh"
documentation = "https://docs.caro.sh"
repository = "https://github.com/wildcard/caro"
readme = "README.crates.io.md"
keywords = ["cli", "llm", "shell", "commands", "ai"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "src/**/*",
    "benches/**/*",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
    "README.crates.io.md",
    "CHANGELOG.md",
]

# Binary target
[[bin]]
name = "caro"
path = "src/main.rs"

[dependencies]
# Core CLI and async runtime
clap = { version = "4.5", features = ["derive", "env", "color"] }
clap_complete = "4.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync", "fs"] }

# Serialization and configuration
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
config = "0.15"

# HTTP client for remote backends and Hugging Face Hub downloads
reqwest = { version = "0.11", features = ["stream", "json", "rustls-tls"], default-features = false }

# Error handling and logging
anyhow = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"

# User interface and interaction
dialoguer = "0.12"
colored = "3"
indicatif = "0.17"

# Cross-platform support
directories = "6"
dirs = "6"
which = "8.0"
os_info = "3.14"
sysinfo = "0.33"
home = "=0.5.12"  # Pin to avoid edition2024 requirement in 0.5.11+

# Model integration (Hugging Face Hub)
hf-hub = { version = "0.4", default-features = false, features = ["tokio", "rustls-tls"] }
url = "2.5"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

# Regex for safety validation
regex = "1"
once_cell = "1.19"

# Cryptography for checksums
sha2 = "0.10"

# Telemetry
uuid = { version = "1", features = ["v4", "serde"] }
rusqlite = { version = "0.34", features = ["bundled"] }
machine-uid = "0.5"

# File locking for atomic operations
fd-lock = "4.0"

# Async trait support
async-trait = "0.1"
futures = "0.3"

# Knowledge index (local vector database)
lancedb = { version = "0.23", optional = true }
fastembed = { version = "4", optional = true }
arrow-array = { version = "56.2", optional = true }
arrow-schema = { version = "57.2", optional = true }
chromadb = { version = "2.3", optional = true }

# Optional MLX support for Apple Silicon (behind feature flag)
cxx = { version = "1.0", optional = true }

# Embedded model inference - MLX for Apple Silicon via llama.cpp
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
mlx-rs = { version = "0.25", optional = true }
llama_cpp = { version = "0.3", features = ["metal"], optional = true }

# Embedded model inference - Candle for CPU (cross-platform)
candle-core = { version = "0.9", optional = true }
candle-transformers = { version = "0.9", optional = true }
tokenizers = { version = "0.22", default-features = false, features = ["http", "rustls-tls", "onig"] }

[dev-dependencies]
assert_cmd = "2"
tokio-test = "0.4"
regex = "1.10"
tempfile = "3.10"
serial_test = "3"
proptest = "1"
criterion = { version = "=0.7.0", features = ["html_reports"] }
futures = "0.3"
serde_yaml = "0.9"
env_logger = "0.11"
wiremock = "0.5"

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "config"
harness = false

[[bench]]
name = "context"
harness = false

[[bench]]
name = "logging"
harness = false

# Custom test harness for evaluation
[[test]]
name = "evaluation"
path = "tests/evaluation/main.rs"
harness = false

[features]
default = ["embedded-mlx", "embedded-cpu"]  # Core features for default build
# Note: knowledge feature requires protobuf compiler, enable with --features knowledge
mock-backend = []
remote-backends = ["tokio/net"]
embedded-mlx = ["cxx", "llama_cpp"]
embedded-cpu = ["candle-core", "candle-transformers"]
knowledge = ["lancedb", "fastembed", "arrow-array", "arrow-schema"]
chromadb = ["knowledge", "dep:chromadb"]  # ChromaDB backend (requires knowledge base features)

[profile.release]
# Optimize for binary size (<50MB target)
opt-level = "z"     # Optimize for size
lto = true          # Link-time optimization
strip = true        # Strip debug symbols
codegen-units = 1   # Single codegen unit for better optimization
panic = "abort"     # Smaller binary size

[profile.dev]
# Fast compilation for development
opt-level = 0
debug = true
overflow-checks = true

# Benchmark profile
[profile.bench]
opt-level = 3
debug = false
lto = true

# Profile for release with debug info (useful for profiling)
[profile.release-with-debug]
inherits = "release"
debug = true
strip = false

# Metadata for docs.rs
[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

# Badges for crates.io
[badges]
maintenance = { status = "actively-developed" }
