[package]
name = "caro-wasm"
version = "0.1.0"
edition = "2021"
description = "Caro CLI - WebAssembly module for browser-based command validation and generation"
license = "AGPL-3.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
regex = "1.10"
once_cell = "1.19"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
opt-level = "s"
lto = true
