[package]
name = "cmdai"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Convert natural language to shell commands using local LLMs"
keywords = ["cli", "llm", "shell", "commands", "ai"]
categories = ["command-line-utilities", "development-tools"]

# Binary target
[[bin]]
name = "cmdai"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
async-trait.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
colored.workspace = true
console.workspace = true
indicatif.workspace = true
dialoguer.workspace = true
tempfile.workspace = true
regex.workspace = true
once_cell.workspace = true
chrono.workspace = true
directories.workspace = true
which.workspace = true

# Additional cmdai-specific dependencies
toml = "0.8"
config = "0.13"
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false, optional = true }
tracing-appender = "0.2"
crossterm = "0.27"
atty = "0.2"
dirs = "5"
os_info = "3.7"
sysinfo = "0.29"
hf-hub = { version = "0.3", features = ["tokio"] }
url = "2.5"
rusqlite = { version = "0.29", features = ["bundled", "chrono", "serde_json"] }
r2d2 = "0.8"
r2d2_sqlite = "0.22"
uuid = { version = "1.0", features = ["v4"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
percent-encoding = "2.3"
sha2 = "0.10"
futures = "0.3"
futures-util = "0.3"
async-stream = "0.3"
pin-project-lite = "0.2"
parking_lot = "0.12"
tokio-util = "0.7"
cxx = { version = "1.0", optional = true }

# Embedded model inference - MLX for Apple Silicon
[target.'cfg(all(target_os = "macos", target_arch = "aarch64"))'.dependencies]
mlx-rs = { version = "0.25", optional = true }

# Embedded model inference - Candle for CPU (cross-platform)
candle-core = { version = "0.9.1", optional = true }
candle-transformers = { version = "0.9.1", optional = true }
tokenizers = { version = "0.15", features = ["http"], optional = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile.workspace = true
serial_test = "3"
proptest = "1"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
path = "benches/performance.rs"

[features]
default = ["embedded-cpu"]
mock-backend = []
remote-backends = ["reqwest", "tokio/net"]
embedded-mlx = ["cxx", "mlx-rs"]
embedded-cpu = ["candle-core", "candle-transformers", "tokenizers"]
embedded = ["embedded-cpu"]
full = ["remote-backends", "embedded-mlx", "embedded-cpu"]
