[package]
name = "web-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"
env_logger = "0.11"
log = "0.4"

[dev-dependencies]
reqwest = { version = "0.11", features = ["json"] }
