[package]
name = "caro-evaluation"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
similar = "2.2"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
regex = "1.0"

[dev-dependencies]
tokio-test = "0.4"

# Binary will be implemented in WP07
# [[bin]]
# name = "evaluate"
# path = "bin/evaluate.rs"
# required-features = []
