[package]
name = "caro-tui-demo"
version = "0.1.0"
edition = "2021"
description = "Interactive TUI demo for Caro powered by Ratzilla"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
ratzilla = { version = "0.2", features = ["webgl"] }
ratatui = "0.29"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
] }
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
unicode-width = "0.2"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
